@@ -17,17 +17,8 @@ AC_CONFIG_FILES([Makefile]
                 [src/Makefile]
                 [src/libopenvrml/Makefile]
                 [src/libopenvrml/openvrml/Makefile]
-                [src/libopenvrml-gl/Makefile]
-                [src/libopenvrml-gl/openvrml/Makefile]
-                [src/libopenvrml-gl/openvrml/gl/Makefile]
-                [src/lookat/Makefile]
-                [java/Makefile]
-                [java/vrml/Makefile]
-                [java/vrml/node/Makefile]
-                [java/vrml/field/Makefile]
                 [test/Makefile]
                 [openvrml.pc]
-                [openvrml-gl.pc]
                 [openvrml.spec])
 
 AM_INIT_AUTOMAKE([1.7 foreign])
@@ -167,6 +158,10 @@ else
   fi
   AC_DEFINE([OPENVRML_ENABLE_SCRIPT_NODE_JAVA], [1],
             [Defined if Script node Java support is enabled.])
+  AC_CONFIG_FILES([java/Makefile]
+                  [java/vrml/Makefile]
+                  [java/vrml/node/Makefile]
+                  [java/vrml/field/Makefile])
 fi
 AC_SUBST([JNI_CFLAGS])
 AC_SUBST([JNI_LIBS])
@@ -183,6 +178,10 @@ if test "X$enable_gl_renderer" != "Xno"; then
   if test "X$no_gl" = "Xyes"; then
     AC_MSG_ERROR([OpenGL/Mesa is required for the GL renderer])
   fi
+  AC_CONFIG_FILES([src/libopenvrml-gl/Makefile]
+                  [src/libopenvrml-gl/openvrml/Makefile]
+                  [src/libopenvrml-gl/openvrml/gl/Makefile]
+                  [openvrml-gl.pc])
 fi
 AM_CONDITIONAL([ENABLE_GL_RENDERER],
                [test "X$enable_gl_renderer" != "Xno" -a "X$no_gl" != "Xyes"])
@@ -196,6 +195,9 @@ if test "X$enable_lookat" != "Xno"; then
   if test "X$no_glut" = "Xyes"; then
     AC_MSG_ERROR([glut is required for lookat])
   fi
+  AC_CONFIG_FILES([src/lookat/Makefile]
+                  [src/lookat/lookat],
+                  [chmod +x src/lookat/lookat])
 fi
 AM_CONDITIONAL([ENABLE_LOOKAT],
                [test "X$enable_lookat" != "Xno" -a "X$no_glut" != "Xyes"])
